package(default_visibility = ["//visibility:public"])

load("@rules_rust//rust:defs.bzl", "rust_test")

rust_test(
    name = "autolink_test",
    srcs = [
        "tests/autolink.rs",
    ],
    deps = [
       	"//rust/twitter-text:twitter_text",
    	"//rust/config:twitter_text_config",
    	"//rust/parser:twitter_text_parser",
        "//rust_bindings/3rdparty/crates:pest",
        "//rust_bindings/3rdparty/crates:serde",
        "//rust_bindings/3rdparty/crates:serde_yaml_ng",
    ],
    proc_macro_deps = [
        "//rust_bindings/3rdparty/crates:serde_derive",
    ],
    compile_data = [
        "tests/autolink.yml",
    ],
    edition = "2018",
)

rust_test(
    name = "emoji_test",
    srcs = [
        "tests/emoji.rs",
    ],
    deps = [
       	"//rust/twitter-text:twitter_text",
    	"//rust/config:twitter_text_config",
    	"//rust/parser:twitter_text_parser",
        "//rust_bindings/3rdparty/crates:pest",
        "//rust_bindings/3rdparty/crates:serde",
        "//rust_bindings/3rdparty/crates:serde_yaml_ng",
    ],
    proc_macro_deps = [
        "//rust_bindings/3rdparty/crates:serde_derive",
    ],
    compile_data = [
        "tests/unicode11-emoji-test.txt",
    ],
    edition = "2018",
)

rust_test(
    name = "extract_test",
    srcs = [
        "tests/extract.rs",
    ],
    deps = [
       	"//rust/twitter-text:twitter_text",
    	"//rust/config:twitter_text_config",
    	"//rust/parser:twitter_text_parser",
        "//rust_bindings/3rdparty/crates:pest",
        "//rust_bindings/3rdparty/crates:serde",
        "//rust_bindings/3rdparty/crates:serde_yaml_ng",
    ],
    proc_macro_deps = [
        "//rust_bindings/3rdparty/crates:serde_derive",
    ],
    compile_data = [
        "tests/extract.yml",
    ],
    edition = "2018",
)

rust_test(
    name = "hit_highlighting_test",
    srcs = [
        "tests/hit_highlighting.rs",
    ],
    deps = [
       	"//rust/twitter-text:twitter_text",
    	"//rust/config:twitter_text_config",
    	"//rust/parser:twitter_text_parser",
        "//rust_bindings/3rdparty/crates:pest",
        "//rust_bindings/3rdparty/crates:serde",
        "//rust_bindings/3rdparty/crates:serde_yaml_ng",
    ],
    proc_macro_deps = [
        "//rust_bindings/3rdparty/crates:serde_derive",
    ],
    compile_data = [
        "tests/hit_highlighting.yml",
    ],
    edition = "2018",
)

rust_test(
    name = "tlds_test",
    srcs = [
        "tests/tlds.rs",
    ],
    deps = [
       	"//rust/twitter-text:twitter_text",
    	"//rust/config:twitter_text_config",
    	"//rust/parser:twitter_text_parser",
        "//rust_bindings/3rdparty/crates:pest",
        "//rust_bindings/3rdparty/crates:serde",
        "//rust_bindings/3rdparty/crates:serde_yaml_ng",
    ],
    proc_macro_deps = [
        "//rust_bindings/3rdparty/crates:serde_derive",
    ],
    compile_data = [
        "tests/tlds.yml",
    ],
    edition = "2018",
)

rust_test(
    name = "validate_test",
    srcs = [
        "tests/validate.rs",
    ],
    deps = [
       	"//rust/twitter-text:twitter_text",
    	"//rust/config:twitter_text_config",
    	"//rust/parser:twitter_text_parser",
        "//rust_bindings/3rdparty/crates:pest",
        "//rust_bindings/3rdparty/crates:serde",
        "//rust_bindings/3rdparty/crates:serde_yaml_ng",
    ],
    proc_macro_deps = [
        "//rust_bindings/3rdparty/crates:serde_derive",
    ],
    compile_data = [
        "tests/validate.yml",
    ],
    edition = "2018",
)

filegroup(
    name = "yaml",
    srcs = glob(["tests/*.yml"])
)
