package(default_visibility = ["//visibility:public"])

load("@rules_rust//rust:defs.bzl", "rust_test")
load("@rules_python//python:defs.bzl", "py_binary")
load("@tld_gen_deps//:requirements.bzl", "requirement")

exports_files([
    "tests/tld_gen_requirements.txt",
    "tests/unicode11-emoji-test.txt",
])

rust_test(
    name = "autolink_test",
    srcs = [
        "tests/autolink.rs",
    ],
    deps = [
       	"//rust/twitter-text:twitter_text_rlib",
    	"//rust/config:twitter_text_config",
    	"//rust/parser:twitter_text_parser",
        "//3rdparty/crates:pest",
        "//3rdparty/crates:serde",
        "//3rdparty/crates:serde_yaml_ng",
    ],
    proc_macro_deps = [
        "//3rdparty/crates:serde_derive",
    ],
    compile_data = [
        "tests/autolink.yml",
    ],
    edition = "2018",
)

rust_test(
    name = "emoji_test",
    srcs = [
        "tests/emoji.rs",
    ],
    deps = [
       	"//rust/twitter-text:twitter_text_rlib",
    	"//rust/config:twitter_text_config",
    	"//rust/parser:twitter_text_parser",
        "//3rdparty/crates:pest",
        "//3rdparty/crates:serde",
        "//3rdparty/crates:serde_yaml_ng",
    ],
    proc_macro_deps = [
        "//3rdparty/crates:serde_derive",
    ],
    compile_data = [
        "tests/unicode11-emoji-test.txt",
    ],
    edition = "2018",
)

rust_test(
    name = "extract_test",
    srcs = [
        "tests/extract.rs",
    ],
    deps = [
       	"//rust/twitter-text:twitter_text_rlib",
    	"//rust/config:twitter_text_config",
    	"//rust/parser:twitter_text_parser",
        "//3rdparty/crates:pest",
        "//3rdparty/crates:serde",
        "//3rdparty/crates:serde_yaml_ng",
    ],
    proc_macro_deps = [
        "//3rdparty/crates:serde_derive",
    ],
    compile_data = [
        "tests/extract.yml",
    ],
    edition = "2018",
)

rust_test(
    name = "hit_highlighting_test",
    srcs = [
        "tests/hit_highlighting.rs",
    ],
    deps = [
       	"//rust/twitter-text:twitter_text_rlib",
    	"//rust/config:twitter_text_config",
    	"//rust/parser:twitter_text_parser",
        "//3rdparty/crates:pest",
        "//3rdparty/crates:serde",
        "//3rdparty/crates:serde_yaml_ng",
    ],
    proc_macro_deps = [
        "//3rdparty/crates:serde_derive",
    ],
    compile_data = [
        "tests/hit_highlighting.yml",
    ],
    edition = "2018",
)

rust_test(
    name = "tlds_test",
    srcs = [
        "tests/tlds.rs",
    ],
    deps = [
       	"//rust/twitter-text:twitter_text_rlib",
    	"//rust/config:twitter_text_config",
    	"//rust/parser:twitter_text_parser",
        "//3rdparty/crates:pest",
        "//3rdparty/crates:serde",
        "//3rdparty/crates:serde_yaml_ng",
    ],
    proc_macro_deps = [
        "//3rdparty/crates:serde_derive",
    ],
    compile_data = [
        "tests/tlds.yml",
    ],
    edition = "2018",
)

rust_test(
    name = "validate_test",
    srcs = [
        "tests/validate.rs",
    ],
    deps = [
       	"//rust/twitter-text:twitter_text_rlib",
    	"//rust/config:twitter_text_config",
    	"//rust/parser:twitter_text_parser",
        "//3rdparty/crates:pest",
        "//3rdparty/crates:serde",
        "//3rdparty/crates:serde_yaml_ng",
    ],
    proc_macro_deps = [
        "//3rdparty/crates:serde_derive",
    ],
    compile_data = [
        "tests/validate.yml",
    ],
    edition = "2018",
)

filegroup(
    name = "yaml",
    srcs = glob(["tests/*.yml"], allow_empty = True)
)

# Hermetic TLD generator
py_binary(
    name = "tld_gen",
    srcs = ["tests/tld_gen.py"],
    main = "tests/tld_gen.py",
    deps = [
        requirement("PyYAML"),
        requirement("patricia-trie"),
    ],
)

genrule(
    name = "generate_tld_grammar",
    srcs = ["tests/tld_lib.yml"],
    outs = ["generated_tld.pest"],
    cmd = "$(location :tld_gen) --input $(location tests/tld_lib.yml) --output $@",
    tools = [":tld_gen"],
    visibility = ["//visibility:public"],
)

# Insert generated TLD grammar into the parser file
genrule(
    name = "update_parser_with_tlds",
    srcs = [
        "//rust/parser:src/twitter_text.pest",
        ":generated_tld.pest",
    ],
    outs = ["twitter_text_with_tlds.pest"],
    cmd = "$(location tests/insert_tld_grammar.sh) $(location //rust/parser:src/twitter_text.pest) $(location :generated_tld.pest) $@",
    tools = ["tests/insert_tld_grammar.sh"],
    visibility = ["//visibility:public"],
)
