[package]
name = "twitter_text_conformance"
version = "0.2.0"
authors = ["Robert Sayre <sayrer@gmail.com>"]
edition = "2018"
description = "An implementation of twitter-text in Rust."
license = "Apache-2.0"

[dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_yaml = "0.7"
pest = "2.1.0"
twitter-text = { path = "../twitter-text", version = "0.2.0" }
twitter_text_config = { path = "../config", version = "0.2.0" }
twitter_text_parser = { path = "../parser", version = "0.2.0" }
