[package]
name = "twitter_text_conformance"
version = "0.2.0"
authors = ["Robert Sayre <sayrer@gmail.com>"]
edition = "2018"
description = "An implementation of twitter-text in Rust."
license = "Apache-2.0"

[dependencies]
serde = "1.0.228"
serde_derive = "1.0.228"
serde_json = "1.0.145"
serde_yaml_ng = "0.10.0"
pest = "2.8.4"
twitter-text = { path = "../twitter-text", version = "0.2.0" }
twitter_text_config = { path = "../config", version = "0.2.0" }
twitter_text_parser = { path = "../parser", version = "0.2.0" }
