package(default_visibility = ["//visibility:public"])

load("@rules_cc//cc:defs.bzl", "cc_test")

# Sanitizer-enabled test targets
# These tests run with AddressSanitizer (ASan) and LeakSanitizer (LSan)
#
# On macOS: Uses Apple Clang's native ASAN runtime (via Apple CC toolchain)
# On Linux: Uses hermetic LLVM toolchain's ASAN runtime
#
# To run:
#   bazel test //rust/cpp-sanitizer-bindings:all

cc_test(
    name = "config_test_asan",
    srcs = [
        "//rust/cpp-bindings:config_test.cpp"
    ],
    data = ["//rust/cpp-bindings:config_test_data"] + select({
        "@platforms//os:linux": ["@llvm_toolchain_llvm//:lib/clang/17/lib/x86_64-unknown-linux-gnu/libclang_rt.asan.so"],
        "//conditions:default": [],
    }),
    copts = [
        "-Iexternal/gtest/include",
        "-fsanitize=address",
        "-fno-omit-frame-pointer",
        "-g",
    ],
    linkopts = [
        "-fsanitize=address",
    ] + select({
        "@platforms//os:linux": [
            "-Wl,-rpath,$ORIGIN/config_test_asan.runfiles/toolchains_llvm++llvm+llvm_toolchain_llvm/lib/clang/17/lib/x86_64-unknown-linux-gnu",
        ],
        "//conditions:default": [],
    }),
    deps = [
        "//3rdparty/crates:cxx_cc",
        "//rust/twitter-text:twitter_text_wrapper",
        "//rust/cpp-bindings:twitter_text",
        "@googletest//:gtest_main",
    ],
)

cc_test(
    name = "autolink_test_asan",
    srcs = [
        "//rust/cpp-bindings:test_helpers.h",
        "//rust/cpp-bindings:autolink_test.cpp",
        "//rust/ffi-bindings:modifier_headers"
    ],
    data = ["//rust/conformance:yaml"] + select({
        "@platforms//os:linux": ["@llvm_toolchain_llvm//:lib/clang/17/lib/x86_64-unknown-linux-gnu/libclang_rt.asan.so"],
        "//conditions:default": [],
    }),
    copts = [
        "-Iexternal/gtest/include",
        "-Irust/ffi-bindings/include",
        "-fsanitize=address",
        "-fno-omit-frame-pointer",
        "-g",
    ],
    linkopts = [
        "-fsanitize=address",
    ] + select({
        "@platforms//os:linux": [
            "-Wl,-rpath,$ORIGIN/autolink_test_asan.runfiles/toolchains_llvm++llvm+llvm_toolchain_llvm/lib/clang/17/lib/x86_64-unknown-linux-gnu",
        ],
        "//conditions:default": [],
    }),
    deps = [
        "//rust/cpp-bindings:twitter_text",
        "@googletest//:gtest_main",
        "@com_github_jbeder_yaml_cpp//:yaml-cpp"
    ],
)

cc_test(
    name = "extractor_test_asan",
    srcs = [
        "//rust/cpp-bindings:test_helpers.h",
        "//rust/cpp-bindings:extractor_test.cpp"
    ],
    data = ["//rust/conformance:yaml"] + select({
        "@platforms//os:linux": ["@llvm_toolchain_llvm//:lib/clang/17/lib/x86_64-unknown-linux-gnu/libclang_rt.asan.so"],
        "//conditions:default": [],
    }),
    copts = [
        "-Iexternal/gtest/include",
        "-fsanitize=address",
        "-fno-omit-frame-pointer",
        "-g",
    ],
    linkopts = [
        "-fsanitize=address",
    ] + select({
        "@platforms//os:linux": [
            "-Wl,-rpath,$ORIGIN/extractor_test_asan.runfiles/toolchains_llvm++llvm+llvm_toolchain_llvm/lib/clang/17/lib/x86_64-unknown-linux-gnu",
        ],
        "//conditions:default": [],
    }),
    deps = [
        "//rust/cpp-bindings:twitter_text",
        "@googletest//:gtest_main",
        "@com_github_jbeder_yaml_cpp//:yaml-cpp"
    ],
)

cc_test(
    name = "hithighlighter_test_asan",
    srcs = [
        "//rust/cpp-bindings:hithighlighter_test.cpp"
    ],
    data = ["//rust/conformance:yaml"] + select({
        "@platforms//os:linux": ["@llvm_toolchain_llvm//:lib/clang/17/lib/x86_64-unknown-linux-gnu/libclang_rt.asan.so"],
        "//conditions:default": [],
    }),
    copts = [
        "-Iexternal/gtest/include",
        "-fsanitize=address",
        "-fno-omit-frame-pointer",
        "-g",
    ],
    linkopts = [
        "-fsanitize=address",
    ] + select({
        "@platforms//os:linux": [
            "-Wl,-rpath,$ORIGIN/hithighlighter_test_asan.runfiles/toolchains_llvm++llvm+llvm_toolchain_llvm/lib/clang/17/lib/x86_64-unknown-linux-gnu",
        ],
        "//conditions:default": [],
    }),
    deps = [
        "//rust/cpp-bindings:twitter_text",
        "@googletest//:gtest_main",
        "@com_github_jbeder_yaml_cpp//:yaml-cpp"
    ],
)

cc_test(
    name = "validator_test_asan",
    srcs = [
        "//rust/cpp-bindings:test_helpers.h",
        "//rust/cpp-bindings:validator_test.cpp",
    ],
    data = ["//rust/conformance:yaml"] + select({
        "@platforms//os:linux": ["@llvm_toolchain_llvm//:lib/clang/17/lib/x86_64-unknown-linux-gnu/libclang_rt.asan.so"],
        "//conditions:default": [],
    }),
    copts = [
        "-Iexternal/gtest/include",
        "-fsanitize=address",
        "-fno-omit-frame-pointer",
        "-g",
    ],
    linkopts = [
        "-fsanitize=address",
    ] + select({
        "@platforms//os:linux": [
            "-Wl,-rpath,$ORIGIN/validator_test_asan.runfiles/toolchains_llvm++llvm+llvm_toolchain_llvm/lib/clang/17/lib/x86_64-unknown-linux-gnu",
        ],
        "//conditions:default": [],
    }),
    deps = [
        "//rust/cpp-bindings:twitter_text",
        "@googletest//:gtest_main",
        "@com_github_jbeder_yaml_cpp//:yaml-cpp"
    ],
)
