package(default_visibility = ["//visibility:public"])

load("@rules_rust//rust:defs.bzl", "rust_library")

rust_library(
    name = "twitter_text_parser",
    srcs = [
        "src/highlighter.rs",
        "src/twitter_text.rs",
        "src/lib.rs",
    ],
    data = [
        "src/hit_highlighter.pest",
        "src/twitter_text.pest",
    ],
    deps = [
        "//rust_bindings/cargo:pest",
    ],
    edition = "2018",
    proc_macro_deps = [
        "//rust_bindings/cargo:pest_derive",
    ],
)
