package(default_visibility = ["//visibility:public"])

load("@rules_rust//rust:defs.bzl", "rust_library")

exports_files([
    "src/twitter_text.pest",
    "src/twitter_text_full_tld.pest",
])

rust_library(
    name = "twitter_text_parser",
    srcs = [
        "src/highlighter.rs",
        "src/twitter_text.rs",
        "src/lib.rs",
    ],
    compile_data = [
        "src/hit_highlighter.pest",
        "src/twitter_text.pest",
        "src/twitter_text_full_tld.pest",
    ],
    deps = [
        "//3rdparty/crates:pest",
    ],
    edition = "2021",
    proc_macro_deps = [
        "//3rdparty/crates:pest_derive",
    ],
)
