[package]
name = "twitter_text_parser"
version = "0.2.0"
authors = ["Robert Sayre <sayrer@gmail.com>"]
description = "Parser for twitter-text in Rust."
license = "Apache-2.0"
repository = "https://github.com/sayrer/twitter-text"
edition = "2018"

[dependencies]
pest = "2.8.4"
pest_derive = "2.8.4"

[lib]
doctest = false
test = false
