[package]
name = "twitter_text_py"
version = "0.2.0"
authors = ["Robert Sayre <sayrer@gmail.com>"]
description = "Python bindings for twitter-text using PyO3"
license = "Apache-2.0"
repository = "https://github.com/sayrer/twitter-text"
edition = "2021"

[lib]
name = "twitter_text"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20", features = ["extension-module", "abi3-py312"] }
twitter_text = { path = "../twitter-text", version = "0.2.0", default-features = false }
twitter_text_config = { path = "../config", version = "0.2.0" }
twitter_text_parser = { path = "../parser", version = "0.2.0" }
