package(default_visibility = ["//visibility:public"])

# NOTE: Swift bindings use a hermetic Swift toolchain downloaded by Bazel
# On macOS: Will use system Swift (pre-installed with Xcode)
# On Linux: Will use hermetic Swift 6.0.3 toolchain
#
# To build and test using Swift Package Manager instead:
#   cd rust/swift-bindings
#   swift build
#   swift test

load("@rules_swift//swift:swift_library.bzl", "swift_library")
load("@rules_swift//swift:swift_binary.bzl", "swift_binary")

swift_library(
    name = "TwitterText",
    srcs = glob(["Sources/TwitterText/*.swift"]),
    module_name = "TwitterText",
    deps = [
        "//rust/ffi-bindings:twitter_text_c_headers",
    ],
)

# Swift binary tests disabled due to rules_swift issue on Linux
# The linker receives Darwin-specific flags (-add_ast_path) even when os="linux"
# which ld.lld doesn't understand.
#
# To run tests, use Swift Package Manager:
#   cd rust/swift-bindings && swift test
#
# swift_binary(
#     name = "TwitterTextTests",
#     srcs = glob(["Tests/TwitterTextTests/*.swift"]),
#     deps = [
#         ":TwitterText",
#     ],
# )

# Export Swift package files for use with Swift Package Manager
exports_files([
    "Package.swift",
    "README.md",
])

filegroup(
    name = "swift_sources",
    srcs = glob([
        "Sources/**/*.swift",
        "Sources/**/*.modulemap",
        "Sources/**/*.h",
    ]),
)

filegroup(
    name = "swift_tests",
    srcs = glob([
        "Tests/**/*.swift",
    ]),
)
